# Systemssummer2

./: .gitignore  README.md
my_project/: Cargo.toml
my_project/financial-data-fetcher-rust/: .gitignore  Cargo.toml  README.md
my_project/financial-data-fetcher-rust/src/: main.rs
my_project/module1/: Cargo.toml
my_project/module1/src/: main.rs
my_project/module2/src/: main.rs
my_project/module3/: Cargo.toml
my_project/module3/src/: main.rs
my_project/src/: main.rs
my_project/website_checker_student/: Cargo.toml
my_project/website_checker_student/src/: main.rs
