[package]
name = "financial-data-fetcher"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Periodically fetches BTC, ETH, and S&P 500 (SPY proxy) prices and saves them to CSV files."
license = "MIT"

[dependencies]
ureq = { version = "2.9.7", features = ["json", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"